<resources>
    <string name="app_name">PILULKA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">Button</string>
    <string name="mainwords">Приложение для ведения учета лекарственных препаратов</string>
    <string name="phonenumber">Вход по номеру телефона</string>
    <string name="registration">Регистрация</string>
    <string name="addphonenumber">Введите номер телефона</string>
    <string name="codeFromSMS">Введите код из СМС</string>
    <string name="tryWriteCode">Мы отправили код подтверждения на номер</string>
    <string name="code">- - - -</string>
    <string name="sentCode">Отправить код</string>
    <string name="agreement_first">c <u>Пользовательским соглашением</u></string>
    <string name="agreement_second">c <u>Политикой конфиденциальности</u></string>
    <string name="date">Date</string>
    <string name="pillsList">Список лекарств</string>
    <string name="settings">Настройки</string>
    <string name="settings_main">Основные</string>
    <string name="main_screen_view">Вид главного экрана</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="sound">Звук</string>
    <string name="left_pills_notifications">Напоминания об остатках</string>
    <string name="left_time_notifications">Напоминания о сроке годности</string>
    <string name="take_pills_notifications">Напоминание о приеме</string>
    <string name="settings_about_app">О приложении</string>
    <string name="confidential_policy">Политика конфиденциальности</string>
    <string name="using_conditions">Условия пользования</string>
    <string name="support">Поддержка</string>
    <string name="education">Обучение</string>
    <string name="premium_pro">Premium Pro</string>
    <string name="settings_account">Аккаунт</string>
    <string name="log_out">Выйти</string>
    <string name="app_version">Версия приложения 0.0.0</string>
    <string name="enterPhoneNumber">Введите номер телефона\nМы отправим СМС с кодом подтверждения на номер, который Вы укажете</string>
    <string name="getCode">Получить код</string>
    <string name="agreeWith">Нажимая на кнопку Вы соглашаетесь</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="account_screen">Аккаунт</string>
    <string name="my_personals">Мои данные</string>
    <string name="statistics">Статистика</string>
    <string name="course">Курс приема</string>
    <string name="telephone_number">Номер телефона</string>
    <string name="birth_date">Дата Рождения</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="date_placeholder">01.01.01</string>
    <string name="enter">Вход</string>
    <string name="enterYourData">Введите свои данные</string>
    <string name="enter_birth_date">Введите дату рождения</string>

    <string-array name="days">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>

</resources>