<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poller_one"
            android:text="@string/settings"
            android:textColor="@color/words_color_dark"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="48dp" />

        <TextView
            android:id="@+id/main_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_main"
            android:textColor="@color/words_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="88dp" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notifications"
            android:textColor="@color/words_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="170dp" />

        <TextView
            android:id="@+id/about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_about_app"
            android:textColor="@color/words_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="420dp" />

        <TextView
            android:id="@+id/settings_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_account"
            android:textColor="@color/words_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="28dp"
            android:layout_marginTop="725dp" />

        <Button
            android:id="@+id/main_view"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="117dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/main_screen_view"
            android:textColor="@color/words_color_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sound"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/sound"
            android:textColor="@color/words_color_dark"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_marginStart="28dp"
            android:layout_marginTop="201dp" />

        <Switch
            android:id="@+id/left_pills"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="256dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/left_pills_notifications"
            android:textColor="@color/words_color_dark"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:theme="@style/SCBSwitch"/>

        <Switch
            android:id="@+id/left_time"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="311dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/left_time_notifications"
            android:textColor="@color/words_color_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:theme="@style/SCBSwitch"/>

        <Switch
            android:id="@+id/take_pills"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/take_pills_notifications"
            android:theme="@style/SCBSwitch"
            android:textColor="@color/words_color_dark"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:layout_marginStart="28dp"
            android:layout_marginTop="366dp"/>

        <Button
            android:id="@+id/confidential_policy"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="449dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:gravity="center_vertical"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:text="@string/confidential_policy"
            android:textColor="@color/words_color_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/using_conditions"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/using_conditions"
            android:textColor="@color/words_color_dark"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_marginStart="28dp"
            android:layout_marginTop="504dp" />

        <Button
            android:id="@+id/support"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/support"
            android:textColor="@color/settings_blue"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_marginStart="28dp"
            android:layout_marginTop="559dp" />

        <Button
            android:id="@+id/education"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/education"
            android:gravity="center_vertical"
            android:textColor="@color/settings_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_marginStart="28dp"
            android:layout_marginTop="614dp" />

        <Button
            android:id="@+id/premium_pro"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:gravity="center_vertical"
            android:text="@string/premium_pro"
            android:textColor="@color/settings_green"
            android:textSize="18sp"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_marginStart="28dp"
            android:layout_marginTop="669dp" />

        <Button
            android:id="@+id/log_out"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:background="@drawable/white_settings_button"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/log_out"
            android:textColor="@color/settings_red"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_marginStart="28dp"
            android:layout_marginTop="755dp"  />

        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/app_version"
            android:layout_marginTop="810dp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>