<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poller_one"
            android:text="@string/settings"
            android:textColor="@color/words_color_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="48dp" />

        <TextView
            android:id="@+id/main_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_main"
            android:textColor="@color/words_color"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp" />

        <Button
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_settings_button"
            android:text="@string/main_screen_view" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notifications"
            android:textColor="@color/words_color"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Switch" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>