<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0FF"
    tools:context=".EnterCode">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codeFromSMS"
            android:gravity="center"
            android:layout_marginTop="120dp"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tryWriteCode"
            android:gravity="center"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNumberPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:background="@drawable/phoneplace"
            android:hint="@string/code"
            android:gravity="center"
            android:textSize="40sp"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            android:maxLength="4" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="15dp"
            android:text="@string/sentCode" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>