<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poller_one"
        android:text="@string/account_screen"
        android:textColor="@color/words_color_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp" />

    <TextView
        android:id="@+id/my_personals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_personals"
        android:textColor="@color/words_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="88dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Фамилия:"
            android:textColor="@color/words_color_dark" />
        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Имя:"
            android:textColor="@color/words_color_dark" />

        <TextView
            android:id="@+id/textview_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Дата рождения:"
            android:textColor="@color/words_color_dark" />

        <TextView
            android:id="@+id/textview_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Номер телефона:"
            android:textColor="@color/words_color_dark" />

         </LinearLayout>


    <Button
        android:id="@+id/course"
        style="@style/Widget.AppCompat.ActionButton.CloseMode"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/white_settings_button"
        android:ems="10"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/course"
        android:textColor="@color/words_color_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/statistics"
        style="@style/Widget.AppCompat.ActionButton.CloseMode"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="377dp"
        android:background="@drawable/white_settings_button"
        android:ems="10"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/statistics"
        android:textColor="@color/words_color_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <include
        android:id="@+id/bottom_navi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        layout="@layout/fragment_bottom_navigation"/>

</RelativeLayout>