<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0FF"
    android:foregroundTint="#CC99CACE"
    tools:context=".EnterData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterYourData"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="70dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/button_grey_color">

            <EditText
                android:id="@+id/surname"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/surname"
                android:layout_gravity="center"
                android:textColor="@color/button_grey_color"
                android:textColorHint="@color/button_grey_color"
                android:backgroundTint="@color/button_grey_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/button_grey_color">

            <EditText
                android:id="@+id/name"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:layout_gravity="center"
                android:textColor="@color/button_grey_color"
                android:textColorHint="@color/button_grey_color"
                android:backgroundTint="@color/button_grey_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/button_grey_color">

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Введите дату рождения"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textColor="@color/button_grey_color"
                android:backgroundTint="@color/button_grey_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="date"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/button_grey_color">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/addphonenumber"
            android:layout_gravity="center"
            android:textColor="@color/button_grey_color"
            android:textColorHint="@color/button_grey_color"
            android:backgroundTint="@color/button_grey_color"
            android:textStyle="bold"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"/>


    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/continue_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/settings_green"
            android:text="Продолжить"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>